--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -152,6 +152,58 @@
 	max-width: 100%;
 }
 
+.cb-grid-offset_0 {
+	margin-left: 0%;
+}
+
+.cb-grid-offset_1 {
+	margin-left: 8.33333%;
+}
+
+.cb-grid-offset_2 {
+	margin-left: 16.66667%;
+}
+
+.cb-grid-offset_3 {
+	margin-left: 25%;
+}
+
+.cb-grid-offset_4 {
+	margin-left: 33.33333%;
+}
+
+.cb-grid-offset_5 {
+	margin-left: 41.66667%;
+}
+
+.cb-grid-offset_6 {
+	margin-left: 50%;
+}
+
+.cb-grid-offset_7 {
+	margin-left: 58.33333%;
+}
+
+.cb-grid-offset_8 {
+	margin-left: 66.66667%;
+}
+
+.cb-grid-offset_9 {
+	margin-left: 75%;
+}
+
+.cb-grid-offset_10 {
+	margin-left: 83.33333%;
+}
+
+.cb-grid-offset_11 {
+	margin-left: 91.66667%;
+}
+
+.cb-grid-offset_12 {
+	margin-left: 100%;
+}
+
 /* Кнопка из шапки обертки */
 .cb-btn {
 	position: relative;
@@ -396,6 +448,79 @@
     font-style: italic;
     color: #999999; }
 
+/* Поле выбора файла */
+.cb-form-image__label {
+  padding-left: 6px;
+  margin: 0 0 14px;
+  font-size: 14px;
+  line-height: 21px;
+  color: #666666; }
+
+.cb-form-image__field {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 100%;
+  height: 44px; }
+
+.cb-form-image__picker {
+  position: relative;
+  width: 43px;
+  height: 100%;
+  border: 1px solid #ccc;
+  border-left-color: transparent;
+  background-color: #fbfbfb;
+  overflow: hidden; }
+  .cb-form-image__picker input[type="file"] {
+    display: none; }
+    .cb-form-image__picker input[type="file"] + label {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      cursor: pointer; }
+
+.cb-form-image__input {
+  width: -webkit-calc(100% - 44px);
+  width: calc(100% - 44px);
+  height: 100%;
+  outline: none !important;
+  border: 1px solid #ccc;
+  padding: 0 12px;
+  font-size: 14px;
+  line-height: 22px;
+  color: #333333; }
+  .cb-form-image__input::-webkit-input-placeholder {
+    font-style: italic;
+    color: #999999; }
+  .cb-form-image__input::-moz-placeholder {
+    font-style: italic;
+    color: #999999; }
+  .cb-form-image__input:-moz-placeholder {
+    font-style: italic;
+    color: #999999; }
+  .cb-form-image__input:-ms-input-placeholder {
+    font-style: italic;
+    color: #999999; }
+
 /* Выпадающий список */
 .cb-form-select__label {
   padding-left: 6px;
@@ -524,7 +649,8 @@
 
 /* Строка */
 .cb-row__col {
-  margin: 0 0 10px; }
+  margin-top: 0;
+  margin-bottom: 10px; }
 
 /* Колонка */
 .cb-column__block {
